@@ -1557,4 +1557,11 @@ public class Matrix4 implements Serializable {
 		dst[10] = val[M13];
 		dst[11] = val[M23];
 	}
+
+	/** @return True if this matrix has any rotation or scaling, false otherwise */
+	public boolean hasRotationOrScaling () {
+		return !(MathUtils.isEqual(val[M00], 1) && MathUtils.isEqual(val[M11], 1) && MathUtils.isEqual(val[M22], 1)
+			&& MathUtils.isZero(val[M01]) && MathUtils.isZero(val[M02]) && MathUtils.isZero(val[M10]) && MathUtils.isZero(val[M12])
+			&& MathUtils.isZero(val[M20]) && MathUtils.isZero(val[M21]));
+	}
 }
